working_controllers/Set_Requests_and_Limits/Require_Equal_Requests_Limits/test-fail-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-passing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-passing
  template:
    metadata:
      labels:
        app: test-passing
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m # unequal cpu requests
              memory: 128Mi
