working_controllers/Set_Requests_and_Limits/Require_Equal_Requests_Limits/test-fail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-failing
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-failing
  template:
    metadata:
      labels:
        app: test-failing
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            # limits missing
